# foolibrary-cmake

./: CMakeLists.txt  LICENSE  README.md
cmake_modules/: Project.cmake  cpack.cmake  test.cmake
include/: my_class.h
src/: my_class.cpp
test/: my_class_test.cpp
